package com.plantsync.platform.plantprofiles.domain.model.aggregates;

import com.plantsync.platform.plantprofiles.domain.model.commands.CreatePlantCommand;
import com.plantsync.platform.plantprofiles.domain.model.commands.CreatePlantHistoryCommand;
import com.plantsync.platform.shared.domain.model.aggregates.AuditableAbstractAggregateRoot;
import com.plantsync.platform.plantprofiles.domain.model.valueobjects.PlantId;
import jakarta.persistence.*;
import lombok.Getter;
import lombok.Setter;

import java.time.LocalDate;
import java.time.LocalTime;

@Getter
@Setter
@Entity
public class PlantHistory extends AuditableAbstractAggregateRoot<PlantHistory> {


    @Embedded
    @AttributeOverride(name = "value", column = @Column(name = "plant_id"))
    private PlantId plantId;


    private String type;
    private LocalDate date;
    private LocalTime time;
    private Integer humidity;

    public PlantHistory(){
        super();
    }
    public PlantHistory(CreatePlantHistoryCommand command) {
        this.plantId = command.plantId();
        this.type = command.type();
        this.date = command.date();
        this.time = command.time();
        this.humidity = command.humidity();


    }

}
